# FlakyExperiment

./: .gitignore  README.md  exp_flakiness.xml  experiment.py  experiment_pd.py  foo_input.csv  gitpush.sh  macos_podman_fix.sh  martin_repos_flapy.csv  pyproject.toml  repo_martin_frozen.csv  repos_test.csv  repositories_flakiness_big.csv  repositories_flakiness_small.csv  repositories_python_top_200.csv  repository_pynguin.csv  run_container.sh  run_csv.sh  run_line.sh  run_pynguin_container.sh  run_pynguin_csv.sh  run_pynguin_line.sh  setup_experiment.sh
analysis/: OD_analysis.ipynb  count_tests.py  coverage.py  flaky_classification.ipynb  gen.py  internal_validity.ipynb  repo_analysis.ipynb  results_analysis.ipynb
analysis/.ipynb_checkpoints/: results_analysis-checkpoint.ipynb
csv/: about_those_csv_files.txt  flapy_input_flakyProj_2020.csv  martin_frozen_requirements.csv  martin_frozen_requirements_2.csv  nod_flaky_proj_pivot.csv  nod_flaky_proj_pivot_test.csv  owain_parry_projects.csv  own_searched_projects.csv  python_top_200.csv  repos.csv  software_eng_chair_uni_passau.csv
setup_tools/: add_frozen_requirements.py  create_experiment.py  create_flapy_csv.py  create_flapy_csv_from_pynguin_csv.py  create_frozen_requirements.py  ignore_frozen_requirements.py  merge_csv.py  merge_repo_csv.py  tag_matcher.py  tools.py
src/flapy_csv/: run_flapy.csv  run_flapy_BTTracker.csv  run_flapy_no_tests_to_be_run.csv
src/pynguin_csv/: martin_pyn.csv  martin_pyn_frozen_req.csv  martin_pynguin.csv  martin_pynguin_frozen_req.csv  merged.csv  merged_short.csv  pynguin_run_0.csv  (+796 more)
